<resources>
    <string name="app_name">Ejercicio04F</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="prompt_usuario">Usuario</string>
    <string name="prompt_contrasena">Contraseña</string>
    <string name="prompt_login">Entrar</string>
    <string name="label_registro">Registrate</string>
    <string name="label_usuario">Usuario</string>
    <string name="label_nombre">Nombre</string>
    <string name="label_Email">Email</string>
    <string name="label_Apellido">Apellido</string>
    <string name="label_guardar">Guardar</string>
</resources>